# nntile_logger

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: calculate.cpp  nntile_logger.cpp  nntile_logger.h  nntile_logger.hpp  starpu_logger.cpp  starpu_logger.h  websocket_client.cpp  websocket_client.hpp
